<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whyles.explore.intentsamples.commonintent.CommonIntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_alarm_clock"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/alarm_clock"/>

        <Button
            android:id="@+id/btn_calendar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/calendar"/>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/camera"/>

        <Button
            android:id="@+id/btn_contacts"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/contacts"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/email"/>

        <Button
            android:id="@+id/btn_file_storage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/file_storage"/>

        <Button
            android:id="@+id/btn_local_action"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/local_action"/>

        <Button
            android:id="@+id/btn_maps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/maps"/>

        <Button
            android:id="@+id/btn_music_or_video"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/music_or_video"/>

        <Button
            android:id="@+id/btn_new_note"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/new_note"/>

        <Button
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/phone"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/search"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/settings"/>

        <Button
            android:id="@+id/btn_text_messaging"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_messaging"/>

        <Button
            android:id="@+id/btn_web_browser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/web_browser"/>

    </LinearLayout>

</ScrollView>
