<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.whyles.explore.intentsamples.commonintent.CameraActivity">

    <Button
        android:id="@+id/btn_capture_picture"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/camera_capture_a_picture"/>

    <Button
        android:id="@+id/btn_capture_video"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btn_capture_picture"
        android:text="@string/camera_capture_a_video"/>

    <Button
        android:id="@+id/btn_camera_img"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btn_capture_video"
        android:text="@string/camera_with_image"/>

    <Button
        android:id="@+id/btn_camera_video"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btn_camera_img"
        android:text="@string/camera_with_video"/>

</RelativeLayout>
