<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.whyles.explore.intentsamples.commonintent.AlarmClockActivity">

    <Button
        android:id="@+id/btn_create_alarm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/alarm_clock_create_an_alarm"/>

    <Button
        android:id="@+id/btn_create_timer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btn_create_alarm"
        android:text="@string/alarm_clock_create_a_timer"/>

    <Button
        android:id="@+id/btn_show_alarms"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btn_create_timer"
        android:text="@string/alarm_clock_show_all_alarms"/>

</RelativeLayout>
